spacing fixes

--- a/logout-page/style.scss
+++ b/logout-page/style.scss
@@ -414,7 +414,7 @@
 
     /* Banner section start */
     .banner-section{
-        margin-bottom: 54px;
+        padding-bottom: 54px;
         &__wraper{
             background-color: #F6F7FC;
             border-radius: 4px;
@@ -459,7 +459,7 @@
             }
         }
         @media(max-width:768px){
-            margin-bottom: 40px;
+            padding-bottom: 40px;
             &__wraper{
                 padding: 30px 0 20px;
                 text-align: center;
